FIX layout broker, some css added

--- a/src/assets/css/custom.scss
+++ b/src/assets/css/custom.scss
@@ -1,9 +1,14 @@
 body{
   padding-top:0 !important;
+  a:hover{
+    color:rgb(86,48,112) !important
+}
 }
 
 #header-navbar{
-  
+  background-color: white;
+  border: solid 1px rgba(160, 160, 160, 0.3);
+  margin-bottom: 1em;
   div > a{ 
     padding:0;
     font-family: "Raleway", Helvetica, sans-serif;
@@ -13,15 +18,16 @@ body{
     padding-left: 0.3em;
     padding-right: 0.6em;
     background-color: inherit;
-    color:rgba(0,0,0,.55);
-    
-  }
-  div > a:hover{
-      color:rgb(86,48,112) !important
+    color:rgba(0,0,0,.55); 
   }
  
   #brand-name{
-        font-weight: 800;
+    font-weight: 800;
+    font-size: 1.15rem;
+  }
+  .navbar-divider{
+    border-left: 1px solid hsla(0,0%,62.7%,.3);
+    padding-left: 1.25rem;
   }
 }
 
